--- a/services/ai-narrative/package.json
+++ b/services/ai-narrative/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "tsc-watch --onSuccess \"node dist/index.js\"",
-    "build": "tsc"
+    "build": "tsc",
+    "test": "npm run build && node --test dist/__tests__/AIService.test.js"
   },
   "keywords": [],
   "author": "",
@@ -15,6 +16,7 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
+    "@google/genai": "^1.13.0",
     "openai": "^5.12.1",
     "zod": "^3.25.76"
   },
