--- a/package.json
+++ b/package.json
@@ -5,6 +5,10 @@
   "main": "index.js",
   "scripts": {
     "dev": "concurrently \"npm run dev --workspace=frontend\" \"npm run dev --workspace=services/api-gateway\" \"npm run dev --workspace=services/rabbitmq\" \"npm run dev --workspace=services/game-engine\" \"npm run dev --workspace=services/ai-narrative\" \"npm run dev --workspace=services/memory-service\" \"npm run dev --workspace=services/player-service\" \"npm run dev --workspace=services/world-service\" \"npm run dev --workspace=services/knowledge-base-service\"",
+    "lint": "eslint . --ext .ts,.tsx,.js,.jsx",
+    "lint:fix": "eslint . --ext .ts,.tsx,.js,.jsx --fix",
+    "format": "prettier --write .",
+    "format:check": "prettier --check .",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
