--- a/services/rabbitmq/package.json
+++ b/services/rabbitmq/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
+    "@shared/module": "1.0.0",
     "amqplib": "^0.10.8",
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
