--- a/shared/package.json
+++ b/shared/package.json
@@ -1,8 +1,20 @@
 {
-  "name": "shared",
+  "name": "@shared/module",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "private": true,
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
+  "exports": {
+    ".": {
+      "types": "./dist/index.d.ts",
+      "default": "./dist/index.js"
+    },
+    "./*": "./dist/*"
+  },
+  "files": [
+    "dist"
+  ],
   "devDependencies": {
     "typescript": "^5.9.2"
   },
