memory-service: add SqliteEventRepository, MemoryManager, tests; update docs/9_Developer_CheatSheet.md

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 # OpenAI API Key (replace with your actual key)
-OPENAI_API_KEY=your_openai_api_key_here
+GEMINI_API_KEY=your_api_key_here
 
 # Ports for services
 API_GATEWAY_PORT=3000
@@ -17,3 +17,7 @@ FRONTEND_PORT=5173
 # Example: ./data/player.db
 # For ChromaDB, default Docker port
 CHROMADB_URL=http://localhost:8000
+
+MEMORY_DB_PATH=SQLite #(шлях до SQLite-файлу, опціонально)
+MEMORY_DEFAULT_CONTEXT_LIMIT=10 #(дефолтна кількість подій у контексті, опціонально)
+PORT=4005 #(порт для локального тесту, опціонально; за замовчуванням 4005)
